feat: 1.회원 통계 REST API 기능 구현 - 회원 통계 템플릿 html 파일 작성